--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,18 @@
 <main class="home">
     <section class="home-header">
-        <nav class="home-header__nav navbar navbar-expand-lg navbar-light home-header__nav no-gutters">
-            <div class="home-header__nav-logo mt-5">
-                <a href="#" class="mt-3">TODO<span>LESS</span></a>
+        <nav class="home-header__nav navbar navbar navbar-expand-lg navbar-light bg-s-white bg-md-none  container-fluid"
+            id="navbar">
+            <div class="home-header__nav-logo">
+                <a href="#" class=" mt-3">TODO<span>LESS</span></a>
             </div>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler btnnav" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class=""> <span class="navbar-toggler-icon"></span>
+                </span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                <ul class="nav justify-content-end home-header__nav-list mt-5 mr-4 ml-auto">
-
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="home-header__nav-list navbar-nav d-flex align-items-center mt-5 mr-4 ml-auto">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">HOME</a>
                     </li>
@@ -35,7 +34,6 @@
                     <li class="nav-item">
                         <a class="signup nav-link rounded-pill" href="#">Sign Up</a>
                     </li>
-
                 </ul>
             </div>
         </nav>
@@ -88,7 +86,7 @@
         <!-------------------About Us------------------------->
 
         <section class="home-about">
-            <div class="home-work__container container">
+            <div class="home-about__container container">
                 <div class="home-about__container-row row">
                     <div class="col-md-6">
                         <div class="home-about__container-row-content">
@@ -132,10 +130,10 @@
                                 <h4>Task Managment</h4>
                             </div>
                             <div class="home-features__container-row__item col-md-3">
-                                <span> <span>
+                                <span> 
                                         <mat-icon aria-hidden="false" aria-label="Example schedule icon">schedule
                                         </mat-icon>
-                                    </span></span>
+                                    </span>
                                 <h4>Time Managment</h4>
                             </div>
                             <div class="home-features__container-row__item col-md-3">
@@ -183,7 +181,7 @@
                 </div>
                 <div class="home-team__gallery-item col-md-2">
                     <h3>Omnia</h3>
-                    <img src="../../assets/img/omnia.png" alt="" class="rounded-circle img-fluid">
+                    <img src="../../assets/img/omnia.jpg" alt="" class="rounded-circle img-fluid">
                 </div>
             </div>
         </div>
@@ -194,91 +192,38 @@
 
     <footer class="home-footer">
         <div class="home-footer__container container-fluid">
-            <div class="boxheader">
-                <a class="home-header__nav-logo " href="#">TODO<span>LESS</span></a>
-                <div class="home-footer__container-header row">
-                    <form class="form-inline">
-                        <div class="form-group mx-sm-3 mb-2">
-                            <h3 class="mr-3">Get Started Now</h3>
-                            <input type="email" class="form-control" placeholder="Email Address">
-                            <button type="submit" class="btn btn-primary">Subscribe</button>
-                        </div>
-                    </form>
+            <div class="boxheader row">
+                <a class="home-header__nav-logo col-md-6 ml-auto " href="#">TODO<span>LESS</span></a>
+                <div class="col-md-6">
+                    <div class="home-footer__container-header row">
+                        <form class="form-inline">
+                            <div class="form-group mx-sm-3 mb-2">
+                                <h3 class="mr-3">Get Started Now</h3>
+                                <input type="email" class="form-control" placeholder="Email Address">
+                                <button type="submit" class="btn btn-primary">Subscribe</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-            <div class="home-footer__container-content row mt-3">
-                <div class="home-footer__container-content-item col-md-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">See It Now</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Our Team</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact US</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="home-footer__container-content-item col-md-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT US</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Partnership</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Our Team</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="home-footer__container-content-item col-md-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">FEATURES</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Task Managment</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Time Managment</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Project Managment</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Planning</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="home-footer__container-content-item col-md-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Support</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Terms & Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Faq</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
+            <ul class="home-footer__container-content row no-gutters">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">HOW IT WORK</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT US</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">OUR FEATURES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">OUR TEAM</a>
+                </li>
+            </ul>
+            <p> 2020 All Right Reserved By TODOLESS </p>
         </div>
     </footer>
 </main>
