--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,8 +14,9 @@ p{
     color:$gray;
     font-weight: $regular;
 }
+
 .about-background-image{
-    background-image: url("../../assets/img/right-orange.png"),url("../../assets/img/left-blue.png");
+    background-image: url("../../assets/img/right-green.png"),url("../../assets/img/left-blue.png");
     background-repeat: no-repeat, no-repeat;
     background-position: right, left;
     background-position-y: 30%, 90%;
@@ -39,6 +40,7 @@ p{
                 font-weight: $bold;
                 font-size: 35px;
                 margin-left: 8%;
+                padding-top: 15px;
                 span{
                     color:$green;
                     font-weight: $medium;
@@ -250,6 +252,10 @@ p{
     // --------------------Start Team-----------------
 
         &-team{
+            background-image: url("../../assets/img/left-green.png");
+            background-repeat: no-repeat;
+            background-position-y: bottom;
+            background-position-x: -85px;
             padding: 3% 0%;
             &_img{
                 padding-right: unset;
@@ -280,13 +286,14 @@ p{
             &-item{
                 h3{
                     font-family: $mainFont;
-                    color: $blue;
+                    color: white;
                     font-size: 25px;
                     text-align: center;
                     font-weight: $semiBold;
                 }
                     img{
-                        border:4px solid white;
+                        border:2px solid white;
+                        box-shadow: $boxShadow;
                     }
                     img:hover{
                         transform: scale(1.2);
@@ -294,8 +301,22 @@ p{
                         -moz-transform: scale(1.2);
                         -ms-transform: scale(1.2);
                         -o-transform: scale(1.2);
-}
+                    }
                 }
+                &-item:hover{
+                    h3{
+                        color: $blue;
+                        padding-bottom: 2%;
+                    }
+                        img{
+                            transform: scale(1.1);
+                            -webkit-transform: scale(1.1);
+                            -moz-transform: scale(1.1);
+                            -ms-transform: scale(1.1);
+                            -o-transform: scale(1.1);
+}
+                    }
+
             }
 
         }
@@ -307,11 +328,13 @@ p{
 
     &-footer{
         background-color:$blue;
-        padding: 10% 0 4% 0%;
+        padding: 10% 0 1% 0%;
         .boxheader{
             display:flex;
             justify-content: space-between;
             align-items:center;
+            margin-left:8%;
+            align-items: inherit;
         }
 
         &__container{
@@ -330,14 +353,18 @@ p{
                }
             }
             &-content{
-                justify-content: space-evenly;
-                padding: 0 8%;
-                &-item{
-                 
-                    .nav-link{
-                        color: white;
-                    }
+                list-style: none;
+                margin-left: 5%;
+                .nav-link{
+                    color: white;
+                    font-family: 'lato';
+                    font-size: 12px;
                 }
+            }
+            p{
+                text-align: center;
+                padding-top: 1%;
+                color: white;
             }
         }
 
@@ -351,3 +378,274 @@ p{
 
     // --------------------End Landing Page-----------------
 
+
+    // --------------------Media Query-----------------
+
+
+    @media screen and (max-width: 768px) {
+      .home{
+          p{
+              font-size: 12px;
+          }
+          .about-background-image{
+              background-size:30%;
+          }
+          &-header{
+              &__nav{
+                  background-color:white;
+                  padding: 3% 0;
+                  &-logo{
+                      margin-left: 5%;
+                  }
+                  button{
+                    margin-right: 5%;
+                    font-size: 20px;
+                  }
+                  &-list{
+                      justify-content: start;;
+                      .nav-link{
+                          color:$blue;
+                          font-size: 15px;
+                          font-weight: $medium;
+                      }
+                  }
+              }
+            &__hero{
+                position: relative;
+                top: 35%;
+                &-header{
+                    h1{
+                        font-size: 25px;
+                        span{
+                            font-size: 15px;
+                        }
+                    }
+                 
+                }
+            }
+          }
+
+          &-work{
+              &__container-row-content{
+                h5{
+                    font-size: 15px;
+                }
+                h3{
+                    font-size: 20px;
+                }
+              }
+          }
+
+          &-about{
+           &__container-row-content{
+                h5{
+                    font-size: 15px;
+                }
+                h3{
+                    font-size: 20px;
+                }
+              }
+          }
+
+          &-features{
+            &__container{
+                &-header{
+                    h5{
+                        font-size: 15px;
+                    }
+                    h3{
+                        font-size: 20px;
+                    }
+                  }
+                &-row{
+                    &__item{
+                        padding: 1%;
+                        span{
+                            font-size: 50px;
+                        }
+                    }
+                }
+            }   
+        }
+
+        &-team{
+            margin-bottom:4%;
+            background-size: 30%;
+         }
+         
+         &-footer{
+             .boxheader{
+                 a{
+                     margin: auto;
+                     text-align: center;    
+                 }
+             }
+                 &__container{
+                      .boxheader{
+                          margin-left: initial;
+                          margin-right: 15%;
+                          a{
+                              padding: 0;
+                          }
+                      }
+                    
+                     &-content{
+                        justify-content: center;
+                        margin-left:unset;
+                     }
+                 }
+         }
+      }
+    }
+
+
+
+    @media screen and (max-width: 480px) {
+        .home{
+            .about-background-image{
+                background-size:30%;
+            }
+            &-header{
+              &__hero{
+                  position: relative;
+                  top: 30%;
+              }
+            }
+
+            &-features{
+                &__container{
+                    &-row{
+                        &__item{
+                            padding: 6%;
+                            margin: 5% 15% 5% 20%;    
+                        }
+                    }
+                }
+            }
+
+            &-team{
+                margin-bottom:4%;
+                background-size: 30%;
+                 &__gallery{
+                     top:0;
+                     &-item{
+                         text-align: center;
+                         margin-top: 7%;
+                         img{
+                             max-width: 50%;
+                         }
+                     }
+                 }
+             }
+
+             &-footer{
+                 .boxheader{
+                     margin-right:unset;
+                     a{
+                         margin: auto;
+                         text-align: center;    
+                     }
+                }
+                     &__container{
+                         &-header{
+                             margin: auto;
+                             justify-content: center;
+                             padding-top: 10%;
+                             text-align: center;
+                             h3{
+                                 padding-bottom:5% ;
+                             }
+                             button{
+                                 text-align: center;
+                                 margin-top:5%
+                             }
+                         }
+                         &-content{
+                            justify-content: center;
+                            padding: unset;
+                         }
+                     }
+             }
+        }
+
+    }
+
+
+
+    @media screen and (max-width: 600px) {
+        .home{
+            
+            &-header{
+              &__hero{
+                  position: relative;
+                  top: 36%;
+                  &-header{
+                      h1{
+                          margin-bottom: auto;
+                      }
+                  }
+                  &-content{
+                      p{
+                        padding-right: 30%;
+                      }
+                  }
+              }
+            }
+            &-work{
+                &__container-row-content{
+                    padding-left: 3%;
+                    padding-top: 8%;
+                }
+            }
+            &-features{
+                &__container{
+                    &-row{
+                        &__item{
+                            padding: 6%;
+                            margin: 5% 15% 5% 20%;    
+                        }
+                    }
+                }
+            }
+            &-team{
+               margin-bottom:4%;
+               background-size: 40%;
+               &__gallery{
+                    top:0;
+                    &-item{
+                        text-align: center;
+                        margin-top: 7%;
+                        img{
+                            max-width: 50%;
+                        }
+                    }
+                }
+            }
+            &-footer{
+                .boxheader{
+                    margin-right:unset;
+                    a{
+                        margin: auto;
+                        text-align: center;    
+                    }
+               }
+                    &__container{
+                        &-header{
+                            margin: auto;
+                            justify-content: center;
+                            padding-top: 10%;
+                            text-align: center;
+                            
+                            button{
+                                text-align: center;
+                            }
+                        }
+                        &-content{
+                           justify-content: center;
+                           padding: unset;
+                        }
+                    }
+            }
+        }
+
+    }
