--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -30,7 +30,15 @@ h3{
         padding: 3rem;
         margin-top: 15rem;
         &-details{
-            color: $blue;
+        color: $blue;
+
+        }
+        &-img{
+            &__form-input{
+                background-color: $gray;
+                border: none;
+                display: none;
+            }
         }
     }
     &__info:first-of-type{
@@ -64,6 +72,7 @@ h3{
        
     }
 }
+
 .comments-parent__formContainer{
     &-form{
         display: flex;
@@ -110,8 +119,39 @@ figure{
     border-radius: 50%;
     vertical-align: middle;
     overflow: hidden;
+    position: relative;
+    
+.attach-file{
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    color: white;
+    font-size: 12px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding: 10px;
+    top: 100%;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    mat-icon{
+        color: white;
+        margin: 0;
+        padding: 0;
+        font-size: 15px;
+        width: 25%;
+    }
+    span{
+        display: block;
+        width: 85%;
+    }
+}
     img{
         width: 100%;
+    }
+    &:hover > form .attach-file{
+        top: 50%;
     }
 }
 // *******star rating**********//
@@ -124,6 +164,11 @@ figure{
 }
 .col-12{
     background-color: $white;
+}
+.profile-info__details-rating{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .hovering-data{
     border: 1px solid $gray;
