--- a/src/app/star-rating/star-rating.component.html
+++ b/src/app/star-rating/star-rating.component.html
@@ -1,4 +1,4 @@
-<svg
+<svg viewBox="0 0 30 30"
 [ngClass]="{'star-rating-filled': rating >= starId, 'star-rating-blank': rating < starId}"
 (mouseenter)='onStarEnter()'
 (mouseleave)='onStarLeave()'
